CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(jmusupplicant)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules/")
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
SET(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")
FIND_PACKAGE(PCAP REQUIRED)
ADD_SUBDIRECTORY("src")