CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(jmusupplicant)
IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	SET( USE_ICONV ON )
ENDIF()
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules/")
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
SET(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")
SET(LIBGIT2_PC_LIBS "")
SET(LIBGIT2_PC_REQUIRES "")
IF (USE_ICONV)
	FIND_PACKAGE(ICONV REQUIRED)
ENDIF()
FIND_PACKAGE(PCAP REQUIRED)
ADD_SUBDIRECTORY("src")