AUX_SOURCE_DIRECTORY("." JMUSUPPLICANT_SRCS)
ADD_SUBDIRECTORY("mentohust_encryption")
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
SET(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")
ADD_EXECUTABLE("jmusupplicant" ${JMUSUPPLICANT_SRCS})
TARGET_LINK_LIBRARIES(jmusupplicant ${PCAP_LIBRARY} ${ICONV_LIBRARY} "mentohust_encryption")